--- a/game/css/main.css
+++ b/game/css/main.css
@@ -282,9 +282,9 @@ page-break-after:avoid;
 #timer {
     position: absolute;
     top: 20px;
-    right: 20px;
+    left: 50%;
     color: #ffffff;
-    font-size: 36px;
+    font-size: 65px;
     font-family: 'bariol_regularregular';
-    width: 90px;
+    transform: translateX(-50%);
 }
